--- a/templates/users/user/login.phtml
+++ b/templates/users/user/login.phtml
@@ -10,6 +10,7 @@
             <input type="password" name="password" id="password">
         </fieldset>
         <p id="error"></p>
+
         <input type="submit" name="login" id="login" value="Login">
     </form>
-<main>
+</main>
