--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -30,6 +30,7 @@ header nav ul li a {
 }
 header nav ul li a:hover {
   transform: translateY(-0.5rem);
+  font-weight: bolder;
 }
 header nav ul li form {
   display: flex;
@@ -41,7 +42,8 @@ header nav ul li form input {
   padding: 0.8rem 1.2rem;
   border: none;
   background-image: url("/res04-projet-soutenance/assets/images/logout-icon.png");
-  background-size: cover;
+  background-position: center center;
+  background-size: 80%;
   background-repeat: no-repeat;
   background-color: #FAFAFA;
   -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
@@ -413,7 +415,8 @@ footer nav ul li a {
   margin: 0.6rem 0;
 }
 .player-progress article.locations .events ul li img {
-  width: 8rem;
+  display: inline-block;
+  width: 16rem;
   margin-right: 0.6rem;
 }
 
