--- a/assets/styles/scss/users/_game.scss
+++ b/assets/styles/scss/users/_game.scss
@@ -151,7 +151,8 @@
                         margin: .6rem 0;
 
                         img {
-                            width: 8rem;
+                            display: inline-block;
+                            width: 16rem;
                             margin-right: .6rem;
                         }
                     }
