--- a/assets/styles/scss/users/partials/_header.scss
+++ b/assets/styles/scss/users/partials/_header.scss
@@ -32,6 +32,7 @@ header {
 
                     &:hover {
                         transform: translateY(-.5rem);
+                        font-weight: bolder;
                     }
                 }
 
@@ -45,7 +46,8 @@ header {
                         padding: .8rem 1.2rem;
                         border:none;
                         background-image: url('/res04-projet-soutenance/assets/images/logout-icon.png');
-                        background-size: cover;
+                        background-position: center center;
+                        background-size: 80%;
                         background-repeat: no-repeat;
                         background-color: $background-main;
                         clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
