--- a/assets/styles/scss/forms/_forms.scss
+++ b/assets/styles/scss/forms/_forms.scss
@@ -104,7 +104,7 @@ form {
 /**** MEDIA QUERIES FOR SMARTPHONES ****/
 @media only screen and (max-width: 767px) {
     form {
-        &.register-login-edit {
+        &.forms {
             max-width: 90%;
             padding: .6rem;
 
