--- a/assets/styles/scss/style.css
+++ b/assets/styles/scss/style.css
@@ -40,28 +40,16 @@ header nav ul li form {
   align-items: center;
 }
 header nav ul li form input {
-  width: 3rem;
-  height: 3rem;
-  padding: 0.8rem 1.2rem;
-  border: none;
   background-image: url("/res04-projet-soutenance/assets/images/logout-icon.png");
-  background-position: center center;
-  background-size: 80%;
-  background-repeat: no-repeat;
-  background-color: #FAFAFA;
-  -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
-          clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
-  cursor: pointer;
 }
 header nav ul li form input:hover {
   filter: saturate(0);
 }
-header nav ul li button {
+header nav ul li button, header nav ul li input {
   width: 3rem;
   height: 3rem;
   padding: 0.8rem 1.2rem;
   border: none;
-  background-image: url("/res04-projet-soutenance/assets/images/moon.png");
   background-position: center center;
   background-size: 80%;
   background-repeat: no-repeat;
@@ -69,6 +57,9 @@ header nav ul li button {
   -webkit-clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
           clip-path: polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
   cursor: pointer;
+}
+header nav ul li button {
+  background-image: url("/res04-projet-soutenance/assets/images/moon.png");
 }
 
 /**** MEDIA QUERIES FOR TABLETS ****/
@@ -715,11 +706,11 @@ form.forms input[type=submit]:hover {
 
 /**** MEDIA QUERIES FOR SMARTPHONES ****/
 @media only screen and (max-width: 767px) {
-  form.register-login-edit {
+  form.forms {
     max-width: 90%;
     padding: 0.6rem;
   }
-  form.register-login-edit fieldset {
+  form.forms fieldset {
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -975,6 +966,9 @@ html body.dark-mode {
 html body.dark-mode header nav ul li a {
   background-color: #0c092b;
   color: #FAFAFA;
+}
+html body.dark-mode header nav ul li input {
+  background-color: #0c092b;
 }
 html body.dark-mode header nav ul li button {
   background-image: url("/res04-projet-soutenance/assets/images/sun.png");
