--- a/assets/styles/scss/style.scss
+++ b/assets/styles/scss/style.scss
@@ -139,6 +139,10 @@ html {
                                 color: $background-main;
                             }
 
+                            input {
+                                background-color: $background-main-dark;
+                            }
+
                             button {
                                 background-image: url('/res04-projet-soutenance/assets/images/sun.png');
                                 background-color: $background-main-dark;
