--- a/assets/styles/scss/users/partials/_header.scss
+++ b/assets/styles/scss/users/partials/_header.scss
@@ -45,18 +45,7 @@ header {
                     align-items:center;
             
                     input {
-                        width: 3rem;
-                        height: 3rem;
-                        padding: .8rem 1.2rem;
-                        border:none;
                         background-image: url('/res04-projet-soutenance/assets/images/logout-icon.png');
-                        background-position: center center;
-                        background-size: 80%;
-                        background-repeat: no-repeat;
-                        background-color: $background-main;
-                        clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
-                                        100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
-                        cursor: pointer;
             
                         &:hover {
                             filter: saturate(0);
@@ -64,12 +53,11 @@ header {
                     }
                 }
 
-                button {
+                button, input {
                     width: 3rem;
                     height: 3rem;
                     padding: .8rem 1.2rem;
                     border: none;
-                    background-image: url('/res04-projet-soutenance/assets/images/moon.png');
                     background-position: center center;
                     background-size: 80%;
                     background-repeat: no-repeat;
@@ -77,6 +65,10 @@ header {
                     clip-path:polygon(0% 15%, 15% 15%, 15% 0%, 85% 0%, 85% 15%, 100% 15%, 
                                     100% 85%, 85% 85%, 85% 100%, 15% 100%, 15% 85%, 0% 85%);
                     cursor: pointer;
+                }
+
+                button {
+                    background-image: url('/res04-projet-soutenance/assets/images/moon.png');
                 }
             }
         }
