--- a/templates/admin/users/users.phtml
+++ b/templates/admin/users/users.phtml
@@ -14,8 +14,16 @@
         </thead>
         <tbody>
             <?php
+                $count = 1;
+
                 foreach($data as $user)
                 {
+                    // I need to have a different ID for each input
+                    $formName = 'form-name-'.$count;
+                    $userId = 'user-id-'.$count;
+                    $userRoleId = 'user-role-id-'.$count;
+                    $submitForm = 'submit-change-role-'.$count;
+
                     echo 
                         "<tr class='data'>
                             <td class='data-row'>".$user->getUsername()."</td>
@@ -29,15 +37,16 @@
                                         <input type='hidden' name='user_id' id='user_id' value='".$user->getId()."'>
                                         <input type='submit' name='submit-delete-account-admin' id='submit-delete-account-admin' value='Delete'>
                                     </form>
-                                    <form action='role-edit' method='POST' id='edit-the-role'>
-                                        <input type='hidden' name='form-name' id='form-name' value='change-role'>
-                                        <input type='hidden' name='user_to_edit_id' id='user_to_edit_id' value='".$user->getId()."'>
-                                        <input type='hidden' name='user_role_id' id='user_role_id' value='1'>
-                                        <input type='submit' name='submit-change-role' id='submit-change-role' value='Change to admin'>
+                                    <form action='/res04-projet-soutenance/admin/all-users' method='POST'>
+                                        <input type='hidden' name='form-name' id='".$formName."' value='change-role'>
+                                        <input type='hidden' name='user_to_edit_id' id='".$userId."' value='".$user->getId()."'>
+                                        <input type='hidden' name='user_role_id' id='".$userRoleId."' value='1'>
+                                        <input type='submit' name='submit-change-role' id='".$submitForm."' value='Change to admin'>
                                     </form>
                                 </td>";
                             }
                         "</tr>";
+                    $count++;
                 }
             ?>
         </tbody>
